# sr-demo

./: .bzrignore  README.md  jenkins.yml  repository.rosinstall  stack.xml
Doc/: Makefile  readme.txt
Doc/source/: conf.py  counting_demo.rst  index.rst  utility_commands.rst
kinect_color_segmentation/include/kinect_color_segmentation/: box_segmentation.hpp  kinect_color_segmentation.hpp  point_sequence_detection.hpp
kinect_color_segmentation/src/: box_segmentation.cpp  kinect_color_segmentation.cpp  point_sequence_detection.cpp
kinematics_tests/src/: get_fk.cpp  get_ik.cpp  goto_ik.cpp  move_ik.cpp
sr_automatic_pid_tuning/include/sr_automatic_pid_tuning/: eoSRAutomaticPidTuning.h  eoSRAutomaticPidTuningEvalFunc.h  eoSRAutomaticPidTuningInit.h  eoSRAutomaticPidTuningMutation.h  eoSRAutomaticPidTuningQuadCrossover.h  eoSRAutomaticPidTuningStat.h
sr_automatic_pid_tuning/src/: SRAutomaticPidTuningEA.cpp
sr_collision_detection/: mainpage.dox  manifest.xml
sr_collision_detection/src/: coll_detection.py  ff_kinematics.py  th_kinematics.py
sr_counting_demo/: mainpage.dox  manifest.xml
sr_counting_demo/action/: CounterDemo.action
sr_counting_demo/config/: sr_target.yaml
sr_counting_demo/launch/: gazebo_arm_and_hand_initial_position.launch  gazebo_credit_card.launch  gazebo_sr_counting_demo.launch  gazebo_sr_counting_demo_gui.launch  gazebo_sr_counting_demo_gui_client.launch  gazebo_table.launch
sr_counting_demo/msg/: CounterDemoAction.msg  CounterDemoActionFeedback.msg  CounterDemoActionGoal.msg  CounterDemoActionResult.msg  CounterDemoGoal.msg  counter_demoAction.msg  counter_demoActionFeedback.msg  counter_demoActionResult.msg  counter_demoFeedback.msg  counter_demoResult.msg
sr_counting_demo/my_models/: my_credit_card.urdf
sr_counting_demo/src/: counter_client.py  counter_client_gui.py  counter_server.py  counter_target.py  get_joint_state.py  sr_counting_demo_functions.py  sr_etherCAT_hand_class.py
sr_dremmeling_wall/src/: sr_dremmeling_wall  wall_dremmeler.py
sr_friction_compensation/src/: sr_friction_compensation.py
sr_grasp_planner/include/sr_grasp_planner/: sr_grasp_planner.hpp  sr_grasp_planner_server.hpp
sr_grasp_planner/src/: sr_grasp_planner.cpp  sr_grasp_planner_server.cpp
sr_graspatron/: CMakeLists.txt  package.xml  setup.py
sr_graspatron/dictionary/: simple_commands.corpus  simple_commands.dic  simple_commands.lm
sr_graspatron/launch/: advanced_gazebo.launch  blockly.launch  camera.launch  demo.launch  gazebo.launch
sr_graspatron/models/: glass_cleaner.sdf  simple_box.sdf
sr_graspatron/scripts/sr_graspatron/: spray_grasp.py  wrench_grasp.py
sr_graspatron/src/sr_graspatron/: demo1.py  demo2.py  gazebo_sim_support.py  utils.py
sr_graspatron/worlds/: new_world.world
sr_grip_feedback/: CMakeLists.txt  README.md  package.xml
sr_grip_feedback/launch/: sr_grip_feedback.launch
sr_grip_feedback/perspectives/: grip_feedback.perspective
sr_grip_feedback/perspectives/multiplot/: hand_feedback_demo.xml
sr_gui_demo1/: mainpage.dox  manifest.xml  sr_gui_demo1.xml
sr_gui_demo1/src/sr_gui_demo1/: Sr_Gui_Demo1.py
sr_gui_demo1/uis/: sr_counting_demo.ui
sr_hand_demos/: mainpage.dox  manifest.xml
sr_hand_demos/launch/: gazebo_arm_and_hand_initial_position.launch  gazebo_credit_card.launch
sr_hand_demos/msg/: counter_demoActionGoal.msg
sr_hand_demos/src/: counter_client.py  counter_server.py  sr_etherCAT_hand_class.py
sr_knot_demo/: mainpage.dox  manifest.xml
sr_knot_demo/models/: rope_generator.py
sr_knot_demo/models/urdf/: rope.urdf
sr_knot_demo/models/xacro/: joint_rope.xacro  link_rope.xacro  segment_rope.xacro
sr_knot_demo/models/xml/: joint_rope.xml  link_rope.xml  segment_rope.xml
sr_naist_living_machines/: mainpage.dox  manifest.xml
sr_ork_tabletop/: CMakeLists.txt  README.md  package.xml  run_docker.sh
sr_ork_tabletop/conf/: detection.object.ros.ork  ork_tabletop.rviz
sr_ork_tabletop/launch/: ork_tabletop.launch
sr_smach_example/src/: sr_smach_example.py
sr_unplug_connector/src/: sr_unplug_connector  unplug_connector_state_machine.py
static_tf_kinect_to_base_calibration/data/multi/: CPPLINT.cfg
static_tf_kinect_to_base_calibration/src/: learn_transform  learn_transform.py
