<?xml version="1.0"?>
<package>
  <name>sr_graspatron</name>
  <version>0.0.1</version>
  <description>The sr_graspatron package</description>
  <maintainer email="software@shadowrobot.com">Shadow Robot's software team</maintainer>

  <license>GPL</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sr_robot_launch</run_depend>

  <url type="repository">https://github.com/shadow-robot/sr-demo</url>
  <url type="bugtracker">https://github.com/shadow-robot/sr-demo/issues</url>
</package>
